--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,8 @@
                         with
                         my dad. My love for nature and learning has persisted to this day.
                     </p>
-                    <p class="transition-candidate text-transition">Happily married, lifetime vegetarian, and Austin,
+                    <p class="transition-candidate text-transition">A few quick facts about my life: happily married,
+                        lifetime vegetarian, and Austin,
                         Texas resident.
 
                     </p>
